syntax = "proto3";

package products;

import "google/protobuf/timestamp.proto";

option go_package = "/gen";

message Product {
  string id = 1;
  string name = 2;
  string slug = 3;
  string category = 4;
  repeated string images = 5;
  string brand = 6;
  string description = 7;
  int32 stock = 8;
  string price = 9;
  string rating = 10;
  int32 num_reviews = 11;
  bool is_featured = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

service ProductService {
  rpc GetProductBySlug(GetProductBySlugRequest) returns (GetProductBySlugResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}

message GetProductBySlugRequest {
  string slug = 1;
}

message GetProductBySlugResponse {
  Product product = 1;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {}
